--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contacts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://maksimarus.github.io/contacts/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
